--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Friend Finder</title>
-	<!-- Bootstrap CDN -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<!-- JQuery -->
-	<script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-	crossorigin="anonymous"></script>
-	<!-- Font Awesome -->
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <title>Friend Finder</title>
+
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <!-- Font Awesome Glyphicons -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
+
 <body>
 
   <div class="container">
@@ -22,23 +21,36 @@
     <div class="jumbotron">
       <h1><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
       <hr>
-      <h2>Answer a few basic questions. </h2>
-      <h2>Then find the friend with the greatest compatibility!</h2>
-      <br>
 
+      <div class="row">
+        <div class="col-lg-12">
+          <h2>Answer a few basic questions. </h2>
+          <h2>Then find the friend with the greatest compatibility!</h2>
+          <br>
+        </div>
+      </div>
       <div>
-        <a href="/survey"><button type="button" class="btn btn-lg btn-primary"><h4> Go to Survey</h4></button></a>
+        <a href="/survey">
+          <button type="button" class="btn btn-lg btn-info">
+            <h4>
+              <span class="glyphicon glyphicon-thumbs-up"></span>Go to Survey</h4>
+          </button>
+        </a>
       </div>
 
     </div>
+  </div>
 
-    <footer class="footer">
-      <div class="container">
-        <p><a href="/data/friends">API Friends List</a> | <a href="https://github.com/mbhardwick/friendfinder">GitHub Repo</a></p>
-      </div>
-    </footer>
+  <footer class="col-lg-12 footer">
+    <div class="container">
+      <p>
+        <a href="/api/friends">API Friends List</a> |
+        <a href="https://github.com/mbhardwick/friendfinder">GitHub Repo</a>
+      </p>
+    </div>
+  </footer>
 
   </div>
-	
 </body>
+
 </html>
